<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProfileView" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/title_activity_profile_view"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/cam_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/cam_images"
        android:textSize="12sp" />

    <Button
        android:id="@+id/facebook_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cam_images"
        android:layout_alignRight="@+id/cam_images"
        android:layout_below="@+id/cam_images"
        android:text="@string/facebook_images"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/aboutMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/facebook_images"
        android:layout_below="@+id/facebook_images"
        android:layout_marginTop="27dp"
        android:text="@string/about_me" />

</RelativeLayout>
