<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BeginActivity" >

    <TextView
        android:id="@+id/begin_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_message" />

    <Button
        android:id="@+id/begin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/back_button"
        android:layout_alignBottom="@+id/back_button"
        android:layout_alignRight="@+id/begin_message"
        android:text="@string/begin_button" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/begin_message"
        android:layout_below="@+id/begin_message"
        android:layout_marginTop="91dp"
        android:text="@string/back_button" />

</RelativeLayout>
