
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ProfileImages" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_images_message"
            android:textSize="24sp" />

		        <ImageView
		            android:id="@+id/profile_picture"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:contentDescription="@string/contentDescription" />
		
		        <ImageView
		            android:id="@+id/image_view_01"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="5dp"
		            android:contentDescription="@string/contentDescription"
		            android:src="@drawable/com_facebook_profile_default_icon" />
		
		        <ImageView
		            android:id="@+id/image_view_02"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:contentDescription="@string/contentDescription"
		            android:src="@drawable/com_facebook_profile_default_icon" />
		
		       <ImageView
		            android:id="@+id/image_view_03"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:contentDescription="@string/contentDescription"
		            android:src="@drawable/com_facebook_profile_default_icon" />
		
		        <ImageView
		            android:id="@+id/image_view_04"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:contentDescription="@string/contentDescription"
		            android:src="@drawable/com_facebook_profile_default_icon" />
		
		        <ImageView
		            android:id="@+id/image_view_05"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:contentDescription="@string/contentDescription"
		            android:src="@drawable/com_facebook_profile_default_icon" />
        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/next_button" />

</RelativeLayout>